correctif version mobile

--- a/modal.css
+++ b/modal.css
@@ -89,21 +89,23 @@ img {
     right: 0;
     top: 0;
   }
+  .topnav.responsive nav {
+    margin-top: 20px;
+  }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+    font-size: 14px;
   }
 }
-
-
 
  @media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    /* margin-top: -15px; */
   }
 } 
 
@@ -114,7 +116,7 @@ main {
   padding-top: 0.5vw;
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 1px 20px 15px;
+  /* margin: 1px 20px 15px; */
   border-radius: 2rem;
   text-align: justify;
 
@@ -515,7 +517,10 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
+  body {
+    width: 100%;
+  }
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -523,7 +528,9 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
   }
   .hero-content::after {
     content: unset;
@@ -532,12 +539,13 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
-    white-space: normal;
+    font-size: 2.5rem;
   }
   .hero-text {
     width: unset;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    margin-top: 20px;
+    max-width: 95%;
   }
   .hero-img img {
     border-radius: 10px;
